# reproducible-dev-environments

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.copilot/: PROMPT_01_Default_datascience_devcontainer.md
.devcontainer/: Dockerfile  devcontainer.json  requirements-dev.in  requirements.in
.github/prompts/: 00_Default_datascience_devcontainer.md.prompt.md
src/: __init__.py
src/your_project/: app.py
tests/: test_app.py
