[project]
name = "your-project"
version = "0.1.0"
description = "DS/LLM project scaffold with reproducible env (.devcontainer + venv + pip-tools)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ian Donaldson" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
